--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/images/Shiv.jpg" class="d-block w-100" alt="" width="400px" height="500px">
+                    <img src="Shiv.jpg" class="d-block w-100" alt="" width="400px" height="500px">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>First slide label</h5>
                         <p>Some representative placeholder content for the first slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/ram.jpg" class="d-block w-100" alt="..." height="500px">
+                    <img src="ram.jpg" class="d-block w-100" alt="..." height="500px">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Second slide label</h5>
                         <p>Some representative placeholder content for the second slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/ganesh.jpg" class="d-block w-100" alt="..." height="500px">
+                    <img src="ganesh.jpg" class="d-block w-100" alt="..." height="500px">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Third slide label</h5>
                         <p>Some representative placeholder content for the third slide.</p>
@@ -107,7 +107,7 @@
                         <div class="card-header">
                             Card Header
                         </div>
-                        <img src="/images/card.png" class="card-img-top" alt="...">
+                        <img src="card.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h4 class="card-title">Card title</h4>
                             <h7 class="sub title">Sub Title</h7>
@@ -131,7 +131,7 @@
                         <div class="card-header">
                             Card Header
                         </div>
-                        <img src="/images/card.png" class="card-img-top" alt="...">
+                        <img src="card.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h4 class="card-title">Card title</h4>
                             <h7 class="sub title">Sub Title</h7>
@@ -155,7 +155,7 @@
                         <div class="card-header">
                             Card Header
                         </div>
-                        <img src="/images/card.png" class="card-img-top" alt="...">
+                        <img src="card.png" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h4 class="card-title">Card title</h4>
                             <h7 class="sub title">Sub Title</h7>
